# finzly-jobs-poc

./: Cargo.toml  README.md  docker-compose.yml
migrations/: 0001_jobs_poc_ddl.sql  0002_next_fire_time.sql
src/: job.rs  main.rs
src/orchestrator/: dispatcher.rs  executor.rs  mod.rs  schedule.rs  scheduler.rs
src/registration/: handler.rs  mod.rs  model.rs  repository.rs
tests/: skip_locked.rs
