[package]
name = "finzly-jobs-poc"
version = "0.1.0"
edition = "2024"
publish = ["finzly-finzly-rust-hosted"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
anyhow = "1"
async-trait = "0.1"

# Phoenix common SDKs (local path deps — see plan)
phoenix-config-sdk = { version = "=1.1.3" }
phoenix-redis-sdk = { version = "=1.1.5" }
phoenix-postgres-sdk = { version = "=1.1.9" }
phoenix-kafka-sdk = { version = "=1.1.15" }
phoenix-security-sdk =  { version = "=1.1.11" }
phoenix-model-sdk =  { version = "=1.1.2" }
phoenix-workflow-client = { version = "=1.1.46" }
serde_yaml = { version = "0.9.34" }
chrono = { version = "0.4.45", default-features = false, features = ["std", "serde"] }
